--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
-/* @import '~bootstrap/dist/css/bootstrap.min.css'; */;
 @import '~carbon-components/css/carbon-components.css';
-/* @import "~@ampath-kenya/ngx-formentry/styles/ngx-formentry.css"; */
+:root {
+  --brand-01: #005d5d;
+  --brand-02: #004144;
+  --brand-03: #007d79;
+}
